--- a/.github/workflows/detach2.yml
+++ b/.github/workflows/detach2.yml
@@ -41,4 +41,4 @@ jobs:
         ls -l
     - name: Simulate Detach
       run: |
-        ./DynamoRIO-Linux-10.91.19860/bin64/drrun -c $DYNAMORIO_DIR/samples/bin/libsample.so -- ./myapp
+        ./DynamoRIO-Linux-10.91.19860/bin64/drrun -c DynamoRIO-Linux-10.91.19860/samples/bin64/libmemtrace_simple.so -- ./myapp
