--- a/.github/workflows/detach2.yml
+++ b/.github/workflows/detach2.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run Application with DynamoRIO
       run: |
-        set +x
+        # set +x
         for i in {1..100}; do
           echo "Run $i"
           ./DynamoRIO-Linux-10.91.19860/bin64/drrun -t drcachesim -- ./myapp
