--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,16 @@ jobs:
     - name: Run Test with DynamoRIO
       run: |
         echo "Running the test program under DynamoRIO..."
-        # set +e
+        set +e
         # Run the test program multiple times to reproduce the signal loss issue
+        mkdir -p ./dyna_logs
+
         for i in {1..100}; do
           echo "Run $i"
-          ./DynamoRIO-Linux-10.91.19860/bin64/drrun -- ./race_client
+          ./DynamoRIO-Linux-10.91.19860/bin64/drrun -- ./race_client -logdir "./dyna_logs/"
         done
+    - name: Upload dynamorio reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: dynamorio-report
+        path: './dyna_logs*'
